--- a/views/index.pug
+++ b/views/index.pug
@@ -1,21 +1,17 @@
 <!DOCTYPE html>
-<html>
-	<head>
-		<meta charset="utf-8" />
-		<title>Recipe Book</title>
-		<script src="js/react/react.js"></script>
-		<script src="js/react/react-dom.js"></script>
-		<script src="js/react/babel-core-browser.min.js"></script>
+html
+	head
+		meta(charset="utf-8")
+		title Recipe Book
+		script(src="js/react/react.js")
+		script(src="js/react/react-dom.js")
+		script(src="js/react/babel-core-browser.min.js")
+		link(href='/css/style.css' rel='stylesheet')
 
-	</head>
+	body
 
-	<body>
-
-		<div id="root">
+		div(id="root")
 			<!-- This div's content will be managed by React. -->
-		</div>
 
-		<script type="text/babel" src='js/pages/index.jsx'></script>
-	</body>
-</html>
-
+		//- script(type="text/babel" src="js/components/sideBar.jsx")
+		script(type="text/babel" src='js/pages/index.jsx')
