--- a/views/index.pug
+++ b/views/index.pug
@@ -3,9 +3,6 @@ html
 	head
 		meta(charset="utf-8")
 		title Recipe Book
-		script(src="js/react/react.js")
-		script(src="js/react/react-dom.js")
-		script(src="js/react/babel-core-browser.min.js")
 		link(href='/css/style.css' rel='stylesheet')
 
 	body
@@ -13,5 +10,4 @@ html
 		div(id="root")
 			<!-- This div's content will be managed by React. -->
 
-		//- script(type="text/babel" src="js/components/sideBar.jsx")
-		script(type="text/babel" src='js/pages/index.jsx')
+		script(src='dist/bundle.js')
