Some stuff for removing duplicates from webpack, but I cant get it to work right now

--- a/views/index.pug
+++ b/views/index.pug
@@ -10,4 +10,5 @@ html
 		div(id="root")
 			<!-- This div's content will be managed by React. -->
 
-		script(src='dist/bundle.js')
+		script(src='dist/main.bundle.js')
+		//- script(src='dist/common.bundle.js')
