--- a/public/css/style.sass
+++ b/public/css/style.sass
@@ -1,12 +1,13 @@
 $sideBar: lime
 $content: cyan
+$sideBarWidth: 300px
 
 .sideBar 
 	position: fixed
 	top: 0
 	left: 0
 	bottom: 0
-	width: 300px
+	width: $sideBarWidth
 	background-color: $sideBar
 
 .menuContainer
@@ -17,17 +18,20 @@ $content: cyan
 
 .menuItem
 	position: relative
+	display: block
 	height: 40px
 	width: 100%
 	background-color: purple
 	border-top: solid 1px black
 	border-bottom: solid 1px black
+	color: black
+	text-decoration: none
 	cursor: pointer
 
 .contentArea
 	position: fixed
 	top: 0
-	bottom: 0
+	height: 100vh
 	left: 300px
-	right: 0
+	width: calc(100% - #{$sideBarWidth})
 	background-color: $content
