--- a/public/css/style.sass
+++ b/public/css/style.sass
@@ -30,8 +30,20 @@ $sideBarWidth: 300px
 
 .contentArea
 	position: fixed
+	display: flex
 	top: 0
 	height: 100vh
 	left: 300px
 	width: calc(100% - #{$sideBarWidth})
 	background-color: $content
+
+.container
+	height: 100%
+	width: 100%
+
+.title
+	height: 50px
+	width: 100%
+	margin-top: 50px
+	font-size: 48px
+	text-align: center
