--- a/views/index.pug
+++ b/views/index.pug
@@ -10,5 +10,5 @@ html
 		div(id="root")
 			<!-- This div's content will be managed by React. -->
 
+		script(src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.2.0/jquery.min.js")
 		script(src='dist/main.bundle.js')
-		//- script(src='dist/common.bundle.js')
