WebPack your bags
webpack sass sheets into bundle, and load that bundle instead of a sass-generated css sheet

--- a/views/index.pug
+++ b/views/index.pug
@@ -3,12 +3,12 @@ html
 	head
 		meta(charset="utf-8")
 		title Recipe Book
-		link(href='/css/style.css' rel='stylesheet')
+		link(href='/dist/main.bundle.css' rel='stylesheet')
 
 	body
 
 		div(id="root")
 			<!-- This div's content will be managed by React. -->
 
-		script(src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.2.0/jquery.min.js")
+		//- script(src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.2.0/jquery.min.js")
 		script(src='dist/main.bundle.js')
