Recipe Card Links
- Large recipe cards link to a specific page for showing all the details about them

--- a/public/css/style.sass
+++ b/public/css/style.sass
@@ -61,6 +61,11 @@ $standardWidth: 300px
 	font-size: 48px
 	text-align: center
 
+.recipeCard
+	text-decoration: none
+	color: initial
+	cursor: pointer
+
 .recipeDisplay
 	margin: 5px
 	padding: 5px
